edit config for hosting on gitlab

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://gitlab.tudelft.nl/aeaahmed/hpcdocumentation"
+baseURL = "https://aeaahmed.gitlab.io/daicdocumentation"
 title = "HPC documentation"
 
 # Language settings
