--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://aeaahmed.gitlab.io/daicdocumentation"
+baseURL = "https://aeaahmed.pages.ewi.tudelft.nl/DAICdocumentation"
 title = "DAIC documentation"
 
 # Language settings
