--- a/config.toml
+++ b/config.toml
@@ -96,28 +96,44 @@ version_menu = "Releases"
 # Flag used in the "version-banner" partial to decide whether to display a 
 # banner on every page indicating that this is an archived version of the docs.
 # Set this flag to "true" if you want to display the banner.
-archived_version = false
+archived_version = true
 
 # The version number for the version of the docs represented in this doc set.
 # Used in the "version-banner" partial to display a version number for the 
 # current doc set.
-version = "0.0"
+version = "0.1.0"
 
 # A link to latest version of the docs. Used in the "version-banner" partial to
 # point people to the main doc site.
-url_latest_version = "https://example.com"
+url_latest_version = "https://aeaahmed.pages.ewi.tudelft.nl/DAICdocumentation/"
+
+##################################
+# Add your release versions here
+[[params.versions]]
+  version = "latest"
+  github_branch = "main"
+  url = "https://aeaahmed.pages.ewi.tudelft.nl/DAICdocumentation/"
+
+[[params.versions]]
+  version = "v0.1.0"
+  github_branch = "v0.1.0"
+  url = "https://aeaahmed.pages.ewi.tudelft.nl/DAICdocumentation"
+
+version_menu_pagelinks = true
+
+###################################
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
-github_repo = "https://gitlab.tudelft.nl/aeaahmed/hpcdocumentation"
+github_repo = "https://gitlab.ewi.tudelft.nl/aeaahmed/DAICdocumentation"
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
-github_project_repo = "https://gitlab.tudelft.nl/aeaahmed/hpcdocumentation"
+# github_project_repo = "https://gitlab.ewi.tudelft.nl/aeaahmed/DAICdocumentation"
 
 # Specify a value here if your content directory is not in your repo's root directory
 # github_subdir = ""
 
 # Uncomment this if your GitHub repo does not have "main" as the default branch,
 # or specify a new value if you want to reference another branch in your GitHub links
-github_branch= "master"
+# github_branch= "main"
 
 # Google Custom Search Engine ID. Remove or comment out to disable search.
 gcs_engine_id = "d72aa9b2712488cc3"
@@ -160,7 +176,7 @@ no = 'Sorry to hear that. Please <a href="https://github.com/USERNAME/REPOSITORY
 # If you want this feature, but occasionally need to remove the Reading time from a single page, 
 # add "hide_readingtime: true" to the page's front matter
 [params.ui.readingtime]
-enable = false
+enable = true
 
 [params.links]
 # End user relevant links. These will show up on left side of footer and in the community page if you have one.
@@ -169,32 +185,31 @@ enable = false
   url = "https://example.org/mail"
   icon = "fa fa-envelope"
   desc = "Discussion and help from your fellow users"
-[[params.links.user]]
+# [[params.links.user]]
  # name ="Twitter"
  # url = "https://example.org/twitter"
  # icon = "fab fa-twitter"
  # desc = "Follow us on Twitter to get the latest news!"
-[[params.links.user]]
+# [[params.links.user]]
  # name = "Stack Overflow"
  # url = "https://example.org/stack"
  # icon = "fab fa-stack-overflow"
  # desc = "Practical questions and curated answers"
 # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
 [[params.links.developer]]
-  name = "GitHub"
-  url = "https://github.com/google/docsy"
-  icon = "fab fa-github"
+  name = "GitLab"
+  url = "https://gitlab.ewi.tudelft.nl/aeaahmed/DAICdocumentation"
+  icon = "fab fa-gitlab"
   desc = "Development takes place here!"
-[[params.links.developer]]
- # name = "Slack"
- # url = "https://example.org/slack"
- # icon = "fab fa-slack"
- # desc = "Chat with other project developers"
-[[params.links.developer]]
-  name = "Developer mailing list"
-  url = "https://example.org/mail"
-  icon = "fa fa-envelope"
-  desc = "Discuss development issues around the project"
+[[params.links.user]]
+  name = "Mattermost"
+  url = "https://mattermost.tudelft.nl/login"
+  icon = "fab fa-slack"
+#[[params.links.developer]]
+#  name = "Mailing list"
+#  url = "https://example.org/mail"
+#  icon = "fa fa-envelope"
+#  desc = "Discuss development issues around the project"
 
 # hugo module configuration
 
