disable the google privacy policy

--- a/config.toml
+++ b/config.toml
@@ -84,7 +84,9 @@ section = ["HTML", "print", "RSS"]
 
 [params]
 copyright = "The DAIC team"
-privacy_policy = "https://policies.google.com/privacy"
+#privacy_policy = "https://policies.google.com/privacy"
+
+
 
 # First one is picked as the Twitter card image if not set on page.
 # images = ["images/project-illustration.png"]
