redirect docs site to daic group

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://aeaahmed.pages.ewi.tudelft.nl/DAICdocumentation"
+baseURL = "https://daic.pages.ewi.tudelft.nl/docs"
 title = "DAIC documentation"
 
 # Language settings
