--- a/config.toml
+++ b/config.toml
@@ -87,7 +87,6 @@ copyright = "The DAIC team"
 #privacy_policy = "https://policies.google.com/privacy"
 
 
-
 # First one is picked as the Twitter card image if not set on page.
 # images = ["images/project-illustration.png"]
 
@@ -107,15 +106,15 @@ version = "0.0"
 
 # A link to latest version of the docs. Used in the "version-banner" partial to
 # point people to the main doc site.
-url_latest_version = "https://aeaahmed.pages.ewi.tudelft.nl/DAICdocumentation/"
+url_latest_version = "https://daic.pages.ewi.tudelft.nl/docs/"
 
 
 
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
-github_repo = "https://gitlab.ewi.tudelft.nl/aeaahmed/DAICdocumentation"
+github_repo = "https://gitlab.ewi.tudelft.nl/daic/docs"
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
-# github_project_repo = "https://gitlab.ewi.tudelft.nl/aeaahmed/DAICdocumentation"
+# github_project_repo = "https://gitlab.ewi.tudelft.nl/daic/docs"
 
 # Specify a value here if your content directory is not in your repo's root directory
 # github_subdir = ""
@@ -169,11 +168,11 @@ enable = true
 
 [params.links]
 # End user relevant links. These will show up on left side of footer and in the community page if you have one.
-[[params.links.user]]
-  name = "User mailing list"
-  url = "https://example.org/mail"
-  icon = "fa fa-envelope"
-  desc = "Discussion and help from your fellow users"
+#[[params.links.user]]
+#  name = "User mailing list"
+#  url = "https://example.org/mail"
+#  icon = "fa fa-envelope"
+#  desc = "Discussion and help from your fellow users"
 # [[params.links.user]]
  # name ="Twitter"
  # url = "https://example.org/twitter"
@@ -187,13 +186,13 @@ enable = true
 # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
 [[params.links.developer]]
   name = "GitLab"
-  url = "https://gitlab.ewi.tudelft.nl/aeaahmed/DAICdocumentation"
+  url = "https://gitlab.ewi.tudelft.nl/daic/docs"
   icon = "fab fa-gitlab"
   desc = "Development takes place here!"
 [[params.links.user]]
   name = "Mattermost"
-  url = "https://mattermost.tudelft.nl/login"
-  icon = "fab fa-slack"
+  url = "https://mattermost.tudelft.nl/signup_user_complete/?id=cb1k3t6ytpfjbf7r397395axyc&md=link&sbr=su"
+  icon = "fa fa-question"
 #[[params.links.developer]]
 #  name = "Mailing list"
 #  url = "https://example.org/mail"
