--- a/config.toml
+++ b/config.toml
@@ -166,6 +166,10 @@ no = 'Sorry to hear that. Please <a href="https://github.com/USERNAME/REPOSITORY
 [params.ui.readingtime]
 enable = true
 
+[params.jstoc]
+enable = true
+custom_headings = "h2, h3"
+
 [params.links]
 # End user relevant links. These will show up on left side of footer and in the community page if you have one.
 #[[params.links.user]]
