add custom google search engine within the website

--- a/config.toml
+++ b/config.toml
@@ -124,13 +124,15 @@ github_repo = "https://gitlab.tudelft.nl/daic/docs"
 # github_branch= "main"
 
 # Google Custom Search Engine ID. Remove or comment out to disable search.
-gcs_engine_id = "d72aa9b2712488cc3"
+ gcs_engine_id = "62a7c518ab0cb42dc"
 
 # Enable Algolia DocSearch
 algolia_docsearch = false
 
 # Enable Lunr.js offline search
-offlineSearch = false
+#offlineSearch = true
+#offlineSearchSummaryLength = 200
+#offlineSearchMaxResults = 25
 
 # Enable syntax highlighting and copy buttons on code blocks with Prism
 prism_syntax_highlighting = true
