remove links to tudelft gitlab

--- a/config.toml
+++ b/config.toml
@@ -112,9 +112,9 @@ url_latest_version = "https://doc.daic.tudelft.nl/"
 
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
-github_repo = "https://gitlab.tudelft.nl/daic/docs"
+github_repo = "https://gitlab.ewi.tudelft.nl/daic/docs"
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
-# github_project_repo = "https://gitlab.tudelft.nl/daic/docs"
+# github_project_repo = "https://gitlab.ewi.tudelft.nl/daic/docs"
 
 # Specify a value here if your content directory is not in your repo's root directory
 # github_subdir = ""
@@ -198,7 +198,7 @@ custom_headings = "h2, h3"
 # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
 [[params.links.developer]]
   name = "GitLab"
-  url = "https://gitlab.tudelft.nl/daic/docs"
+  url = "https://gitlab.ewi.tudelft.nl/daic/docs"
   icon = "fab fa-gitlab"
   desc = "Development takes place here!"
 [[params.links.user]]
