--- a/config.toml
+++ b/config.toml
@@ -55,7 +55,7 @@ anchor = "smart"
 [services]
 [services.googleAnalytics]
 # Comment out the next line to disable GA tracking. Also disables the feature described in [params.ui.feedback].
-id = "G-EMV8573YCZ"
+id = "G-ZMXKPTENJ1"
 
 # Language configuration
 [languages]
