--- a/config.toml
+++ b/config.toml
@@ -165,8 +165,8 @@ sidebar_search_disable = false
 [params.ui.feedback]
 enable = true
 # The responses that the user sees after clicking "yes" (the page was helpful) or "no" (the page was not helpful).
-yes = 'Glad to hear it! Please <a href="https://gitlab.ewi.tudelft.nl/daic/docs/-/issues/new">tell us how we can improve</a>.'
-no = 'Sorry to hear that. Please <a href="https://gitlab.ewi.tudelft.nl/daic/docs/-/issues/new">tell us how we can improve</a>.'
+yes = 'Glad to hear it! Please click <a href="/positive-feedback">here</a> to notify us. We appreciate it.'
+no = 'Sorry to hear that. Please click <a href="/negative-feedback">here</a> let the page maintainers know.'
 
 # Adds a reading time to the top of each doc.
 # If you want this feature, but occasionally need to remove the Reading time from a single page, 
