--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.26",
     "postcss-cli": "^9.1.0"
+  },
+  "dependencies": {
+    "linkinator": "^6.0.4"
   }
 }
