--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,9 +21,9 @@ default:
 
 test:
   script:
-    - hugo --minify
+    - hugo
     - npm install -g linkinator
-    - linkinator public
+    - linkinator "./**/*.md" --markdown
   rules:
     - if: $CI_COMMIT_REF_NAME != $CI_DEFAULT_BRANCH
 
