--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,8 +23,7 @@ test:
   script:
     - hugo
     - npm install -g linkinator
-    - cd content
-    - linkinator "./**/*.md" --markdown
+    - linkinator --server-root public
   rules:
     - if: $CI_COMMIT_REF_NAME != $CI_DEFAULT_BRANCH
 
