--- a/config.toml
+++ b/config.toml
@@ -227,7 +227,9 @@ custom_headings = "h2, h3"
   [[module.imports]]
     path = "github.com/google/docsy/dependencies"
     disable = false    
-
   [[module.imports]]
     path = "github.com/loup-brun/hugo-cite"
     disable = false
+  [[module.imports]]
+    path = "github.com/google/docsy"
+    version = "v0.10.0"
