--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/hugo-cite"]
 	path = themes/hugo-cite
 	url = https://github.com/loup-brun/hugo-cite.git
+[submodule "themes/docsy"]
+	path = themes/docsy
+	url = https://github.com/google/docsy.git
+	branch = v0.10.0
