--- a/config.toml
+++ b/config.toml
@@ -109,70 +109,6 @@ version = "0.0"
 # point people to the main doc site.
 url_latest_version = "https://doc.daic.tudelft.nl/"
 
-	subtitle = "Crisp, minimal, privacy-conscious personal [blog theme for Hugo](https://github.com/chollinger93/ink-free)"
-
-	# Optional 64x64 avatar image.
-	#avatar = "https://image.freepik.com/free-vector/young-man-head-with-beard-avatar-character_24877-36786.jpg"
-
-	featherIconsCDN = false
-
-	# Site color - dark/light/auto
-	mode = "auto"
-
-	# Enable a table of contents:
-	# Either "static"/true, "floating", "both", or "none" (default: static)
-	# The floating TOC dissapears on mobile and adds 200px vertical space
-	toc = "both"
-	# Whether to truncate everything but H1/H2 headings if the last element in a TOC isn't visible. Enabled by default
-	enableTocTrunate = true
-
-	# Max tags
-	maxTags = 7
-
-	# Define words per minute to approximate reading time
-	wpm = 250
-
-	# Stupid footers :)
-	footers = [ 
-		"What Tiger King can teach us about x86 Assembly",
-		"10 Reasons why gcc SHOULD be re-written in JavaScript - You won't believe #8!"
-	]
-
-	# Github base url
-	github = "https://github.com/chollinger93/ink-free"
-
-	# For statistics, we can compare the total word count against a book of your choice
-	statisticsEnabled = true
-	referenceBookWords = 11500.0
-	referenceBook = "The Metamorphosis"
-	referenceAuthor = "Franz Kafka"
-
-
-# Repository configuration (URLs for in-page links to opening issues and suggesting changes)
-github_repo = "https://gitlab.ewi.tudelft.nl/daic/docs"
-# An optional link to a related project repo. For example, the sibling repository where your product code lives.
-# github_project_repo = "https://gitlab.ewi.tudelft.nl/daic/docs"
-
-# Specify a value here if your content directory is not in your repo's root directory
-# github_subdir = ""
-
-# Uncomment this if your GitHub repo does not have "main" as the default branch,
-# or specify a new value if you want to reference another branch in your GitHub links
-# github_branch= "main"
-
-# Google Custom Search Engine ID. Remove or comment out to disable search.
-# gcs_engine_id = "62a7c518ab0cb42dc"
-
-# Enable Algolia DocSearch
-# algolia_docsearch = false
-
-# Enable Lunr.js offline search
-offlineSearch = true
-#offlineSearchSummaryLength = 200
-#offlineSearchMaxResults = 25
-
-# Enable syntax highlighting and copy buttons on code blocks with Prism
-prism_syntax_highlighting = true
 
 [sitemap]
   changefreq = "monthly"
@@ -184,7 +120,7 @@ prism_syntax_highlighting = true
   #  Set to true to disable breadcrumb navigation.
   breadcrumb_disable = false
   # Set to true to disable the About link in the site footer
-  footer_about_disable = false
+  footer_about_enable = false
   # Set to false if you don't want to display a logo (/assets/icons/logo.svg) in the top navbar
   navbar_logo = true
   # Set to true if you don't want the top navbar to be translucent when over a `block/cover`, like on the homepage.
