--- a/config.toml
+++ b/config.toml
@@ -88,6 +88,7 @@ section = ["HTML", "print", "RSS"]
 
 [params]
   copyright = "The DAIC team"
+  github_repo = "https://gitlab.ewi.tudelft.nl/daic/docs"
 
 #privacy_policy = "https://policies.google.com/privacy"
 
