always generate sitemap

--- a/config.toml
+++ b/config.toml
@@ -118,7 +118,7 @@ offlineSearch = true
 
 
 [sitemap]
-  changefreq = "monthly"
+  changefreq = "always"
   filename = "sitemap.xml"
   priority = 0.5
 
