--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 theme = "docsy"
 
-baseURL = "https://doc.daic.tudelft.nl/"
+baseURL = "https://daic.tudelft.nl/"
 title = "DAIC documentation"
 
 # Language settings
@@ -111,9 +111,9 @@ version = "0.0"
 
 # A link to latest version of the docs. Used in the "version-banner" partial to
 # point people to the main doc site.
-url_latest_version = "https://doc.daic.tudelft.nl/"
+url_latest_version = "https://daic.tudelft.nl/"
 
-#gcs_engine_id = "62a7c518ab0cb42dc"
+gcs_engine_id = "62a7c518ab0cb42dc"
 offlineSearch = true
 
 
