nope, google search still does not work, even thought the indexing works now

--- a/config.toml
+++ b/config.toml
@@ -113,8 +113,8 @@ version = "0.0"
 # point people to the main doc site.
 url_latest_version = "https://daic.tudelft.nl/"
 
-gcs_engine_id = "62a7c518ab0cb42dc"
-offlineSearch = false
+#gcs_engine_id = "62a7c518ab0cb42dc"
+offlineSearch = true
 
 
 [sitemap]
