--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,3 @@
-theme = "docsy"
-
 baseURL = "https://daic.tudelft.nl/"
 title = "DAIC documentation"
 
@@ -190,6 +188,7 @@ offlineSearch = true
 # hugo module configuration
 
 [module]
+  proxy = "direct"
   # uncomment line below for temporary local development of module
   # replacements = "github.com/google/docsy -> ../../docsy"
   [module.hugoVersion]
@@ -197,13 +196,5 @@ offlineSearch = true
     min = "0.75.0"
   [[module.imports]]
     path = "github.com/google/docsy"
-    disable = false
-  [[module.imports]]
-    path = "github.com/google/docsy/dependencies"
-    disable = false    
-  [[module.imports]]
-    path = "github.com/loup-brun/hugo-cite"
-    disable = false
-  [[module.imports]]
-    path = "github.com/google/docsy"
     version = "v0.10.0"
+    disable = false
