--- a/config.toml
+++ b/config.toml
@@ -137,7 +137,7 @@ sidebar_search_disable = false
 # If you want this feature, but occasionally need to remove the "Feedback" section from a single page,
 # add "hide_feedback: true" to the page's front matter.
 [params.ui.feedback]
-enable = true
+enable = false
 # The responses that the user sees after clicking "yes" (the page was helpful) or "no" (the page was not helpful).
 yes = 'Glad to hear it! Please click <a href="/feedback/positive">here</a> to notify us. We appreciate it.'
 no = 'Sorry to hear that. Please click <a href="/feedback/negative">here</a> let the page maintainers know.'
